GNOME Bugzilla – Bug 745590
Fix help URI in sharing panel
Last modified: 2015-03-04 15:52:38 UTC
The settings-sharing page was renamed (by me, whoops) in 3.14 to prefs-sharing, to match other pages in gnome-user-docs.
Created attachment 298522 [details] [review] proposed patch Applies to master and 3.14 branches.
Review of attachment 298522 [details] [review]: sure, please push to both master and 3.14
Review of attachment 298522 [details] [review]: Thanks for the review. Pushed to master and gnome-3-14 branches as b4c02fa3b3c2ed51d804cc987239368b033c7eee and e577c8fa1c0b00e3ae02632d9119e4bdccb8c5ff.