sharing: Update help URI

https://bugzilla.redhat.com/show_bug.cgi?id=1193806
https://bugzilla.gnome.org/show_bug.cgi?id=745590